issue #1611: no div wrapping avatar

--- a/sass/_chatbox.scss
+++ b/sass/_chatbox.scss
@@ -669,6 +669,7 @@
         .chat-title {
             padding: 0.3em;
             font-size: 120%;
+            cursor: pointer;
         }
     }
 
