--- a/sass/_chatrooms.scss
+++ b/sass/_chatrooms.scss
@@ -92,8 +92,6 @@
             .chatroom-jid {
                 font-size: var(--font-size-small);
             }
-        }
-        .show-room-details-modal{
             cursor: pointer;
         }
     }
